# AUDiaGentic

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  COPILOT.md  Dockerfile.provider-cli-test  Dockerfile.release-test  Dockerfile.test  GEMINI.md  QWEN.md  README.md  bk.opencode.json  conftest.py  pyproject.toml  release-please-config.json
.audiagentic/: installed.json  project.yaml  prompt-syntax.yaml  providers.yaml
.audiagentic/config/: ADDING_PROVIDERS.md
.audiagentic/interoperability/: AUTO_STATE_GUIDE.md  config.yaml  event-standards.md
.audiagentic/knowledge/: config.yml
.audiagentic/sessions/: 2026-05-14T12-52-26-000Z_019e268b-a30f-74e4-bbd1-de827dfd388c.jsonl  2026-05-14T12-54-07-261Z_019e268d-2e9c-7073-95c8-6007015e2e93.jsonl  2026-05-17T04-36-26-955Z_019e3438-a0cb-7cc4-bd13-2f18d3a78a02.jsonl  2026-05-17T04-40-31-556Z_019e343c-5c44-7faf-acdf-2665475ef419.jsonl  2026-05-17T04-48-34-337Z_019e3443-ba21-714f-82f0-ec68f6d6f04d.jsonl  2026-05-18T00-21-04-026Z_019e3875-2d9a-75a7-a6ad-e3c14ecf5715.jsonl  2026-05-18T00-25-49-237Z_019e3879-87b5-777f-9d51-7be236b662ed.jsonl  2026-05-18T00-31-48-685Z_019e387f-03cd-793b-9fff-0b19249cb85e.jsonl  2026-05-18T00-36-02-098Z_019e3882-e1b2-7898-9dd1-b4b87a5fc962.jsonl  2026-05-18T00-39-21-265Z_019e3885-ebb1-7363-98fe-230c01d9e098.jsonl  2026-05-18T00-44-21-893Z_019e388a-8205-73b8-9ce9-07201502ff7f.jsonl  2026-05-18T01-36-12-658Z_019e38b9-f972-780d-9720-75fa80f0f11c.jsonl  2026-05-18T01-46-44-255Z_019e38c3-9c9f-758e-ad93-ac42bc06dcc7.jsonl  2026-05-18T01-59-49-777Z_019e38cf-9911-7bee-b65b-6d1a66ddc45b.jsonl  2026-05-18T02-13-34-684Z_019e38dc-2f5c-7e7b-a0a0-959161f50800.jsonl
.claude/: settings.json  settings.local.json
.claude/agents/: pkg-impl-reviewer.md
.claude/rules/: prompt-tags.md
.clinerules/: hook-config.md  prompt-tags.md  review-policy.md
.clinerules/skills/: ag-audit.md  ag-check-in-prep.md  ag-implement.md  ag-plan.md  ag-review.md
.codex/: config.toml
.copilot/commands/: ag-audit.md  ag-check-in-prep.md  ag-implement.md  ag-plan.md  ag-review.md
.gemini/: settings.json
.gemini/commands/: ag-audit.md  ag-check-in-prep.md  ag-implement.md  ag-plan.md  ag-review.md
.github/: copilot-instructions.md
.github/agents/: auditor.agent.md  checkin-preparer.agent.md  implementer.agent.md  planner.agent.md  reviewer.agent.md
.github/prompts/: audit.prompt.md  check-in-prep.prompt.md  implement.prompt.md  plan.prompt.md  review.prompt.md
.github/workflows/: ci-contracts.yml  ci-destructive-plan.yml  ci-tests.yml  release-please.audiagentic.yml  release.yml
.opencode/skills/: tm.md
.qwen/: settings.json
.qwen/commands/: ag-audit.md  ag-check-in-prep.md  ag-implement.md  ag-plan.md  ag-review.md
.roo/rules/: audiagentic.md
docs/: Cline_.1_Implementation_Readiness_Assessment.md  Cline_.2_Feature_Completeness_Assessment.md  Cline_.4_.5_Feature_Production_Readiness_Assessment.md  Cline_.4_.5_Feature_Production_Readiness_Assessment_Corrected.md  Cline_Implementation_Review_Report_Phases_0-4.md  Cline_Revised_.2_Feature_Assessment.md  Codex_Report_2026-03-30.md  IMPLEMENTATION_REVIEW_REPORT_PHASES_0_4.md  Implementation_tracker.md  PHASE_0.1-4.1_READINESS_ASSESSMENT.md  PHASE_3.2_FEATURE_REVIEW_REPORT.md  Qwen-Phase_4.3-4.4_Production_Readiness_Review.md  layout.md
docs/architecture/: provider-architecture-review.md
docs/implementation/: 00_Implementation_Index.md  01_Master_Implementation_Roadmap.md  02_Phase_0_Contracts_and_Scaffolding.md  02_Phase_Gates_and_Exit_Criteria.md  03_Phase_1_Lifecycle_and_Project_Enablement.md  03_Target_Codebase_Tree.md  04_Phase_2_Release_Audit_Ledger_and_Release_Please.md  04_System_Assembly_Sequence.md  05_Module_Ownership_and_Parallelization_Map.md  05_Phase_3_Agent_Jobs_and_Simple_Workflows.md  06_Phase_4_Providers_and_Optional_Server_Foundation.md  07_Phase_1_Build_Book.md  07_Phase_5_Discord_Overlay.md  08_Phase_2_Build_Book.md  09_Module_Ownership_and_Parallelization_Map.md  09_Phase_3_Build_Book.md  10_Executable_Packets_Foundation_and_Contracts.md  10_Phase_4_Build_Book.md  11_Executable_Packets_Lifecycle.md  11_Phase_4_1_Provider_Model_Catalog_and_Selection.md  11_Phase_5_Build_Book.md  12_Executable_Packets_Release_and_Ledger.md  12_Phase_6_Build_Book.md  13_Executable_Packets_Jobs_and_Workflows.md  13_Packet_Execution_Rules.md  14_End_to_End_Staged_Build_Summary.md  14_Executable_Packets_Providers_and_Optional_Server.md  15_Executable_Packets_Discord_and_Migration.md  16_Acceptance_Matrix_and_Destructive_Test_Cases.md  17_Current_State_and_Action_Summary.md  18_Review_Resolution_and_Preimplementation_Gates.md  (+34 more)
tests/: __init__.py  planning_testkit.py  test_planning_test_mode.py
tools/: README.md  check_baseline_assets.py  check_cross_domain_imports.py  claude_hooks.py  claude_prompt_trigger_bridge.py  cleanup_test_artifacts.py  cline_prompt_trigger_bridge.py  codex_prompt_trigger_bridge.py  copilot_prompt_trigger_bridge.py  create_sandbox.py  find_legacy_paths.py  fix_task_ids.py  fix_task_ids_pass2.py  gemini_prompt_trigger_bridge.py  lifecycle_stub.py  local_openai_prompt_trigger_bridge.py  migrate_padded_ids_to_raw.py  migrate_request_ids.py  opencode_prompt_trigger_bridge.py  prompt_trigger_bridge.py  provider_status.py  qwen_prompt_trigger_bridge.py  refactor_smoke.py  reformat_pack_ids.py  refresh_model_catalog.py  regenerate_tag_surfaces.py  seed_example_project.py  tm.py  validate_ids.py  validate_packet_dependencies.py  validate_schemas.py
(+37491 files in other folders)
