[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiagentic"
version = "0.1.0"
description = "AUDiaGentic: Agentic workflow orchestration and execution platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
# MCP server support for the planning tool surface
mcp = [
    "mcp>=1.0",
]
# Test dependencies
test = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "mcp>=1.0",
]
# Full development environment
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "mcp>=1.0",
    "ruff",
    "mypy",
]

[project.scripts]
audiagentic = "audiagentic.channels.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
