[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiagentic"
version = "0.1.1"
description = "AUDiaGentic: Agentic workflow orchestration and execution platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
# MCP server support for the planning tool surface
mcp = [
    "mcp>=1.0",
]
# Test dependencies
test = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "mcp>=1.0",
]
# Full development environment
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "mcp>=1.0",
    "ruff",
    "mypy",
]

[project.scripts]
# Only the user-facing CLI is a public entry point.
# MCP servers are internal modules invoked via `python -m` within the Pi
# harness session only. They must not appear on PATH or be discoverable
# by other tools.
audiagentic = "audiagentic.launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"audiagentic" = [
    # Component descriptors — all YAML configs live under config/components/
    "config/components/*.yaml",
    "config/components/**/*.yaml",
    # Package-default configs (mirror runtime .audiagentic/config/ structure)
    "config/harness/ag.yaml",
    "config/rig/rig.yaml",
    # Pi harness home templates
    "provisioning/harness/pi/templates/home/agent/extensions/footer.ts",
    "provisioning/harness/pi/templates/home/agent/mcp.json",
    "provisioning/harness/pi/templates/home/agent/models.json",
    "provisioning/harness/pi/templates/home/agent/SYSTEM.md",
    "provisioning/harness/pi/templates/home/agent/APPEND_SYSTEM.md",
    # Pi lockdown patches
    "provisioning/harness/pi/patches/*.patch",
    # Embedded rig model profiles registry (machine-only, not user config)
    "provisioning/rig/embedded/models.json",
    # Release-please provisioning templates
    "provisioning/release_please/templates/*.json",
    "provisioning/release_please/templates/*.yml",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests/unit", "tests/integration", "tests/e2e", "tests/deferred"]
markers = [
    "dev: exercises local filesystem state; not collected in CI/release (run explicitly: pytest tests/dev/)",
]

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
